# Stage

./: .coverage  .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  agent.json  hello_plan.json  phased_run.py  pyproject.toml  resume.py  run.py  talk.py
.claude/skills/task-orchestrator-dev/: SKILL.md
alembic/: env.py
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: user.py
app/schemas/: user.py
app/services/: auth.py
demo/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
demo/app/: __init__.py  config.py  database.py  main.py
demo/app/api/v1/: __init__.py
demo/app/core/: __init__.py  security.py
examples/: test_report.md
examples/fastapi-demo/: fastapi_implementation_plan.md
examples/fastapi-demo/src/: __init__.py  init_db.py  main.py
skills/code-review-pipeline/: SKILL.md
skills/data-processing-pipeline/: SKILL.md
skills/doc-generation-pipeline/: SKILL.md
skills/health-check-pipeline/: SKILL.md
skills/scaffold-pipeline/: SKILL.md
skills/test-generation-pipeline/: SKILL.md
skills/web-research-pipeline/: SKILL.md
src/openagents_orchestration/: __init__.py  context.py  health_monitor.py  prompts.py  resident.py  runner.py  state_board.py  token_counter.py
src/openagents_orchestration/models/: __init__.py  delivery.py  task.py
src/openagents_orchestration/patterns/: corecoder.py  director.py
src/openagents_orchestration/persistence/: __init__.py  event_recorder.py  (+3 more)
tests/: conftest.py  test_add.py  test_ask_human_reply.py  test_health_monitor.py  test_integration.py  test_models.py  test_pattern.py  test_persistence.py  test_phased_run.py  test_prompt_cache.py  test_resident.py  test_runner_parse.py  test_runtime_compat.py  test_spawn_agents_batch.py  test_state_board.py  test_token_counter.py  test_tools.py
tmp/: persistence-design.md  plan.md
(+56 files in other folders)
