[project]
name = "openagents-orchestration"
version = "0.1.0"
description = "戏台 (Xitai) — Multi-agent orchestration engine with Director-Agent model"
requires-python = ">=3.11"
dependencies = [
    "io-openagent-sdk",
    "pydantic>=2.0",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic-settings",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-multipart",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
  "E501",
  "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
pythonpath = ["src"]
